Fixed overlapping of error message and hyper link on login page

--- a/static/css/auth.css
+++ b/static/css/auth.css
@@ -109,7 +109,7 @@ form{
     font-weight: 100;
     font-style: italic;
     
-    margin: 0 auto;
+    margin: 0px auto 20px auto;
     width: 360px;
     height: 40px;
 
